force-app/main/default/objects/Screen_Flow_Lookup__c/Screen_Flow_Lookup__c.object-meta.xml
<CustomObject>
    <description>Used to provide lookups for flows when user has no &quot;Create&quot; permission on object (usin flow run -as capability)</description>
    <label>Screen Flow Lookup</label>
    <nameField>
        <label>Screen Flow Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Flow Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>