force-app/main/default/objects/Screen_Flow_Lookup__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accout lookup for flow: Autolaunched - Lead : Convert Lead</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Screen Flow Lookup</relationshipLabel>
    <relationshipName>Screen_Flow_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>