force-app/main/default/objects/Screen_Flow_Lookup__c/fields/Contract_Archive__c.field-meta.xml
<CustomField>
    <fullName>Contract_Archive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract archive related to current account</description>
    <label>Contract Archive</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Contract_Archive_Junction__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Contract_Archive_Junction__c</referenceTo>
    <relationshipLabel>Screen Flow Lookup</relationshipLabel>
    <relationshipName>Screen_Flow_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>