force-app/main/default/objects/Screen_Flow_Lookup__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Screen Flow Lookup</relationshipLabel>
    <relationshipName>Screen_Flow_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>